' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml Entity

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package abteilung.entity {
  class "type AbteilungsArt = 'ENTWICKLUNG' | 'VERTRIEB'" as AbteilungsArt
  hide AbteilungsArt circle

  class Abteilung <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly version: number
    @Column() readonly bueroNummer: string
    @Column() readonly zufriedenheit: number
    @Column() readonly art: AbteilungsArt
    @Column() readonly budget: number
    @Column() readonly verfuegbar: boolean
    @Column() readonly gruendungsDatum: Date
    @Column() readonly homepage?: string
    @Column() readonly schlagwoerter?: string
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Abteilungsleiter <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly abteilungsleiter: string
    @Column() readonly vorname?: string
  }

  class Mitarbeiter <<entity>> <<@Entity>> {
    @Column() @PrimaryColumn() readonly id: number
    @Column() readonly name: string
    @Column() readonly jobType?: string
  }

  Abteilung *--> "1" Abteilungsleiter : @OneToOne() \nabteilungsleiter
  Abteilung *--> "*" Mitarbeiter : @OneToMany() \nmitarbeiter

  Abteilung .right.> Entity
  Abteilung .right.> AbteilungsArt
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
